--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        Frequent Questions
+                        Questions
                     </a>
                 </li>
                 <li>
@@ -848,7 +848,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        Frequent Questions
+                        Questions
                     </a>
                 </li>
             </ul>
